test/polyval/pv007.curry
-- An example that checks that the type of anonymous variables is not
-- generalized.

main = (False:l0,"a":l0)
  where l0 = _
